--- a/src/app/explore-container/explore-container.component.html
+++ b/src/app/explore-container/explore-container.component.html
@@ -1,4 +1,14 @@
-<div id="container">
-  <strong>{{ name }}</strong>
-  <p>Explore <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-</div>
+<ion-grid>
+  <ion-row>
+    <ion-col class="ion-text-center">
+      <h1 class="text-title">Welcome!</h1>
+      <p class="text-default">To the completion of the first requirement.</p>
+    </ion-col>
+  </ion-row>
+
+  <ion-row>
+    <ion-col class="ion-text-center">
+      <p class="text-purple">This is {{ name }}.</p>
+    </ion-col>
+  </ion-row>
+</ion-grid>
