--- a/src/app/explore-container/explore-container.component.html
+++ b/src/app/explore-container/explore-container.component.html
@@ -9,6 +9,8 @@
   <ion-row>
     <ion-col class="ion-text-center">
       <p class="text-purple">This is {{ name }}.</p>
+      <p class="text-purple">Backend API URL: {{ backendApi }}</p>
+      <p class="text-purple">Auth API URL: {{ authApi }}</p>
     </ion-col>
   </ion-row>
 </ion-grid>
