--- a/src/global.scss
+++ b/src/global.scss
@@ -32,6 +32,12 @@ a {
   text-decoration: none;
 }
 
+hr {
+  height: 1px;
+  background: rgb(189, 189, 189);
+  display: block;
+}
+
 .text-purple {
   color: #1a205a;
 }
