create gift card list page

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,4 +1,9 @@
-<ion-content [fullscreen]="true">
-  <app-header></app-header>
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+<ion-header>
+  <ion-toolbar>
+    <ion-title>tab2</ion-title>
+  </ion-toolbar>
+</ion-header>
+
+<ion-content>
+
 </ion-content>
