add redeem and redeem confirm

--- a/src/app/tab4/card-detail/card-detail.component.html
+++ b/src/app/tab4/card-detail/card-detail.component.html
@@ -7,8 +7,15 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content *ngIf="item">
   <ion-grid>
+    <ion-row>
+      <ion-col>
+        <h2 class="text-title">
+          Card Info
+        </h2>
+      </ion-col>
+    </ion-row>
     <ion-row>
       <ion-col>
         <ion-text
@@ -19,7 +26,7 @@
     <ion-row>
       <ion-col>
         <ion-text
-          >GC ID: <strong>{{ item.id }}</strong></ion-text
+          >GC ID: <strong>{{ item.code }}</strong></ion-text
         >
       </ion-col>
     </ion-row>
@@ -33,10 +40,14 @@
     </ion-row>
     <ion-row>
       <ion-col>
-        <ion-button expand="full" size="large"> Redeem </ion-button>
+        <ion-button (click)="goToRedeem()" expand="full" size="large">
+          Redeem
+        </ion-button>
       </ion-col>
       <ion-col>
-        <ion-button expand="full" size="large"> Top Up </ion-button>
+        <ion-button (click)="goToTopUp()" expand="full" size="large">
+          Top Up
+        </ion-button>
       </ion-col>
     </ion-row>
 
