fix bugs on redeem and topup pages

--- a/src/app/tab4/card-detail/top-up-card/top-up-card.component.html
+++ b/src/app/tab4/card-detail/top-up-card/top-up-card.component.html
@@ -54,7 +54,7 @@
           >New Amount:
           <strong
             >{{ item.currency }}
-            {{ segment === "tu" ? (item.amount + amount | number) : amount | number }}</strong
+            {{ segment === "tu" ? ((item.amount + +amount) | number) : (+amount | number) }}</strong
           ></ion-text
         >
       </ion-col>
