add qr scanner page

--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,4 +1,1 @@
-<ion-content [fullscreen]="true">
-  <app-header></app-header>
-  <app-explore-container name="Tab 3 page"></app-explore-container>
-</ion-content>
+<ion-content [fullscreen]="true"><app-header></app-header> </ion-content>
