add register and confirm email pages

--- a/src/app/auth/login/login.page.html
+++ b/src/app/auth/login/login.page.html
@@ -22,9 +22,9 @@
         <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
           <div padding>
             <ion-button
-              type="submit"
               expand="block"
               color="warning"
+              [routerLink]="['/register']" 
               >Or create an account</ion-button
             >
           </div>
