--- a/src/app/auth/register/register.page.html
+++ b/src/app/auth/register/register.page.html
@@ -26,7 +26,7 @@
           </div>
           <div padding>
             <ion-item>
-              <ion-input  name="name" type="text" placeholder="Organisation name" ngModel required></ion-input>
+              <ion-input  name="name" type="text" placeholder="Name" ngModel required></ion-input>
             </ion-item>
             <ion-item>
               <ion-input  name="address" type="text" placeholder="Address" ngModel required></ion-input>
