--- a/src/app/auth/login/login.page.html
+++ b/src/app/auth/login/login.page.html
@@ -1,7 +1,7 @@
 <ion-content padding>
   <app-header></app-header>
 
-  <form #form="ngForm" (ngSubmit)="login()" padding>
+  <form #form="ngForm" (ngSubmit)="login(form)" padding>
     <ion-grid>
       <ion-row color="primary" justify-content-center>
         <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
