--- a/src/app/tab5/member-list/member-list.page.html
+++ b/src/app/tab5/member-list/member-list.page.html
@@ -6,27 +6,22 @@
 
 <ion-content>
   <div padding>
-    <ion-button expand="block" fill="solid" color="primary">Add Account</ion-button>
+    <ion-button expand="block" fill="solid" color="primary" routerLink="/tabs/tab5/member-list/user-account">
+      Add Account
+    </ion-button>
   </div>
   <hr>
   <ion-list padding>
-    <ion-item>
-      <ion-avatar slot="start">
-        <img src="https://cdn.pixabay.com/photo/2016/08/08/09/17/avatar-1577909_960_720.png" alt="Profile image">
-      </ion-avatar>
-      <ion-label>John Smith</ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-avatar slot="start">
-        <img src="https://cdn.pixabay.com/photo/2016/08/08/09/17/avatar-1577909_960_720.png" alt="Profile image">
-      </ion-avatar>
-      <ion-label>Marry Jane</ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-avatar slot="start">
-        <img src="https://cdn.pixabay.com/photo/2016/08/08/09/17/avatar-1577909_960_720.png" alt="Profile image">
-      </ion-avatar>
-      <ion-label>John Travolta</ion-label>
-    </ion-item>
+    <ion-item-sliding *ngFor="let user of users">
+      <ion-item (click)="goToUser(user.id)">
+        <ion-avatar slot="start">
+          <img src="https://cdn.pixabay.com/photo/2016/08/08/09/17/avatar-1577909_960_720.png" alt="Profile image">
+        </ion-avatar>
+        <ion-label>{{ user.first_name }} {{ user.last_name }}</ion-label>
+      </ion-item>
+      <ion-item-options side="end">
+        <ion-item-option color="danger" (click)="delete(user.id)">Delete</ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
   </ion-list>
 </ion-content>
