--- a/src/app/tab5/member-list/member-list.page.html
+++ b/src/app/tab5/member-list/member-list.page.html
@@ -17,7 +17,11 @@
         <ion-avatar slot="start">
           <img src="https://cdn.pixabay.com/photo/2016/08/08/09/17/avatar-1577909_960_720.png" alt="Profile image">
         </ion-avatar>
-        <ion-label>{{ user.first_name }} {{ user.last_name }}</ion-label>
+        <ion-label>
+          <h3>{{ user.first_name }} {{ user.last_name }}</h3>
+          <p>{{ user.email }}</p>
+        </ion-label>
+        <br>
       </ion-item>
       <ion-item-options side="end">
         <ion-item-option color="danger" (click)="delete(user.id)">Delete</ion-item-option>
