--- a/src/app/tab5/reset-password/reset-password.page.html
+++ b/src/app/tab5/reset-password/reset-password.page.html
@@ -1,9 +1,27 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>reset-password</ion-title>
+    <ion-title>Reset Password</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+  <div class="ion-text-center" padding>
+    <h4>Reset password for user:</h4>
+    <p *ngIf="user">{{ user.email }}</p>
+  </div>
+  <div padding>
+    <ion-item>
+      <p>Enter new password:</p>
+    </ion-item>
+    <ion-item>
+      <ion-input name="password" type="password" placeholder="Password" [(ngModel)]="password" required></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-input name="confirm" type="password" placeholder="Password again" [(ngModel)]="confirm" required></ion-input>
+    </ion-item>
+    <br>
+    <div padding>
+      <ion-button (click)="save()" expand="block" [color]="'primary'" fill="solid">Save and inform</ion-button>
+    </div>
+  </div>
 </ion-content>
