--- a/src/app/tab5/tab5.page.html
+++ b/src/app/tab5/tab5.page.html
@@ -14,8 +14,8 @@
       <ion-icon color="primary" name="people-outline" slot="start"></ion-icon>
       <ion-label>Member List</ion-label>
     </ion-item>
-    <ion-item>
-      <ion-icon (click)="goToChangePassword()" color="primary" name="lock-closed-outline" slot="start"></ion-icon>
+    <ion-item (click)="goToChangePassword()">
+      <ion-icon color="primary" name="lock-closed-outline" slot="start"></ion-icon>
       <ion-label>Change Password</ion-label>
     </ion-item>
     <br>
