add change password page

--- a/src/app/tab5/change-password/change-password.page.html
+++ b/src/app/tab5/change-password/change-password.page.html
@@ -1,9 +1,32 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>change-password</ion-title>
+    <ion-title>Change Password</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+  <div padding>
+    <ion-item>
+      <p>Enter your old password:</p>
+    </ion-item>
+    <ion-item>
+      <ion-input name="old" type="password" placeholder="Old password" [(ngModel)]="old" required></ion-input>
+    </ion-item>
+  </div>
 
+  <div padding>
+    <ion-item>
+      <p>Enter a new password:</p>
+    </ion-item>
+    <ion-item>
+      <ion-input name="password" type="password" placeholder="New password" [(ngModel)]="password" required></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-input name="confirm" type="password" placeholder="New password again" [(ngModel)]="confirm" required></ion-input>
+    </ion-item>
+    <br>
+    <div padding>
+      <ion-button (click)="save()" expand="block" [color]="'primary'" fill="solid">Save</ion-button>
+    </div>
+  </div>
 </ion-content>
